# fastapi-starter

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflow/: deployment.yml
.github/workflows/: deployment.yml  test-and-check.yml
app/: main.py
app/apps/: routes.py
app/apps/health/: dtos.py
app/apps/health/api/: v1.py
app/core/: init_app.py  logging_config.py  settings.py
app/lib/: abstract_classes.py
docker/: Dockerfile  gunicorn_conf.py
tests/: test_main.py
