[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Galtozzy <galtozzy+git@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"
orjson = "^3.10.6"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest-asyncio = "^0.23.7"
coverage = {extras = ["toml"], version = "^7.5.4"}
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-socket = "^0.7.0"
pytest-mock = "^3.14.0"
taskipy = "^1.13.0"
ipython = "^8.26.0"
ruff = "^0.5.1"

[tool.taskipy.tasks]
format-and-lint = "task ruff && task mypy-lint"

ruff = "ruff format ./app/ ./docker/ ./tests/ && ruff check ./app/ ./docker/ ./tests/ --fix --unsafe-fixes"
tests = "PYTHONPATH=. pytest tests/ -v"

ruff-lint = "ruff check ./app"
mypy-lint = "mypy --install-types --non-interactive ./app/"
poetry-check = "poetry check"
pip-check = "pip check"

[tool.ruff]
line-length = 120
extend-exclude = ["site-packages", "*.pyi"]
target-version = 'py312'


[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'auto'
skip-magic-trailing-comma = false
exclude = ['*.pyi']

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.isort]
split-on-trailing-comma = false
lines-after-imports = 2
known-first-party = ["app"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true


[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = false
pretty = true
follow_imports = "silent"
follow_imports_for_stubs = true
show_error_codes = true
plugins = ["pydantic.mypy", ]

exclude = [
    'test_',
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "html.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--strict-markers',
    '--strict-config',
    '--allow-unix-socket',
    '--allow-hosts=127.0.0.1,127.0.1.1,::1',
    '--tb=short',
    '--cov=app/',
    '--cov-branch',
    '--cov-report=term-missing:skip-covered',
    '--cov-report=html',
    '--cov-fail-under=80',
]
asyncio_mode = "auto"
python_files = "test*.py"
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ config docker etc"
testpaths = [
    "tests",
]


[tool.coverage.run]
# Coverage configuration:
# https://coverage.readthedocs.io/en/latest/config.html
omit = []
concurrency = ['thread']


[tool.coverage.report]
omit = [
]

exclude_lines = [
    'pragma: no cover',
    '@abstract',
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
