[project]
name = "fastapi-template"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "gunicorn>=23.0.0",
    "orjson>=3.10.12",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "uvicorn-worker>=0.2.0",
    "uvicorn[standard]>=0.32.1",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.8",
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "ruff>=0.8.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format-and-lint = "task ruff && task mypy-lint"

ruff = "ruff format ./app/ ./docker/ ./tests/ && ruff check ./app/ ./docker/ ./tests/ --fix --unsafe-fixes"
tests = "PYTHONPATH=. pytest tests/ -v"

ruff-lint = "ruff check ./app"
mypy-lint-call = "mypy --install-types --non-interactive app/"
mypy-lint = "task mypy-lint-call || uv pip install -r .mypy_cache/missing_stubs && task mypy-lint-call"
pip-check = "pip check"

[tool.ruff]
line-length = 120
extend-exclude = ["site-packages", "*.pyi"]
target-version = 'py312'


[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'auto'
skip-magic-trailing-comma = false
exclude = ['*.pyi']

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.isort]
split-on-trailing-comma = false
lines-after-imports = 2
known-first-party = ["app"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true


[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
strict = true
pretty = true
plugins = ["pydantic.mypy", ]

exclude = [
    'test_',
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "html.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--strict-markers',
    '--strict-config',
    '--allow-unix-socket',
    '--allow-hosts=127.0.0.1,127.0.1.1,::1',
    '--tb=short',
    '--cov=app/',
    '--cov-branch',
    '--cov-report=term-missing:skip-covered',
    '--cov-report=html',
    '--cov-fail-under=80',
]
asyncio_mode = "auto"
python_files = "test*.py"
# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ config docker etc"
testpaths = [
    "tests",
]


[tool.coverage.run]
# Coverage configuration:
# https://coverage.readthedocs.io/en/latest/config.html
omit = []
concurrency = ['thread']


[tool.coverage.report]
omit = [
]

exclude_lines = [
    'pragma: no cover',
    '@abstract',
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]
